Related: tdf#145127 force error when compiling for unsupported Apple OSs

While LibreOfficeKit can be built on macOS, the built library won't work
as intended since a headless vcl implementation is needed. Currently,
iOS is the only Apple OS that has a headless vcl implementation so
force a compiler error.

Change-Id: Ib9318851ff7e6c98531672ba7241c22a91f3ef7c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180093
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins